--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,10 +1,16 @@
-@font-face {
-	font-family: 'Bellota-LightItalic';
-	src: url('../fonts/Bellota-LightItalic.otf');
+@font-face{
+    font-family: 'Acme';
+    src: url('../fonts/Acme-Regular.ttf');
 }
-@font-face {
-	font-family: 'Bellota-BoldItalic';
-	src: url('../fonts/Bellota-BoldItalic.otf');
+@font-face{
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-Regular.ttf');
+}
+
+body, ul, li {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -12,54 +18,54 @@ body {
 	background-color: #E6EAE8;
 }
 
-.top_bar {
-	width: 100%;
-	min-width: 1050px;
-	height: 40px;
-	background-color: #20aae5;
-	border-bottom: 0.25em solid #1894ca;
-	margin: 0 0 10px 0;
-	display: inline-flex;
-	position: fixed;
-	z-index: 10;
+header {
+  width: 100%;
+  height: 70px;
+  box-sizing: border-box;
+  background-color: #384F90;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  padding: 0px 0px 0px 30px;
 }
 
-.logo a{
-	font-family: 'Bellota-BoldItalic', sans-serif;
-	margin-left: 10px;
-	font-size: 30;
-	position: relative;
-	top: 9px;
-	text-shadow: #73B6E2 0.5px 0.5px 0px;
-	color: #1086BA;
+header h1 {
+  float: left;
+  margin: 10px 0px;
+  color: white;
+  font-family: 'Acme', sans-serif;
 }
 
-a:hover {
-	text-decoration: none;
+header nav ul {
+  float: right;
+  padding:15px;
 }
 
-nav {
-	float: right;
-	right: 1px;
-	position: absolute;
-	margin: 10px;
+header nav ul li {
+  display: inline-block;
 }
 
-nav a{
-	position: relative;
-	color: #fff;
-	text-decoration: none;
-	font-size: 17px;
+header nav ul li a {
+  display: block;
+  padding: 12px 20px;
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
 }
 
+/*header nav ul li a.active{
+  height: 33px;
+  border-bottom: none;
+}
+*/
 nav a:hover {
-	border-bottom: 7px solid #e67e22;
+	border-bottom: 7px solid #373948;
 	color: #fff;
 }
 
 .wrapper {
 	margin: 0 auto;
-	top: 50px;
+	top: 150px;
 	position: relative;
 	padding: 0 10px;
 	width: 75%;
@@ -123,9 +129,9 @@ textarea:focus {
 	height: 60px;
 	border: none;
 	border-radius: 3px;
-	background-color: #3498db;
-	font-family: 'Bellota-BoldItalic', sans-serif;
-	color: #1E75CA;
+	background-color: #384F90;
+	font-family: 'Open Sans', sans-serif;
+	color: white;
 	text-shadow: #73B6E2 0.5px 0.5px 0px;
 	font-size: 90%;
 	position: absolute;
