--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ nav a:hover {
 	float:right;
 	width: 70%;
 	z-index: -1;
-	min-height: 160px;
+	min-height: 170px;
 }
 
 .post_form {
@@ -346,4 +346,116 @@ textarea:focus {
 .profile_info_bottom{
 	margin:10 0 0 7px;
 
+}
+
+#message_textarea{
+	width: 80%;
+	margin-right: 8px;
+	border-radius: 5px;
+	border: 1px solid black;
+	font-size: 12px;
+
+}
+
+#message_submit{
+	height: 40px;
+	width: 120px;
+	margin:0;
+	position: absolute;
+	border: none;
+	background-color: #384F90;
+	color: white;
+	border-radius:5px;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.clear{
+	clear: both;
+}
+.message {
+	border: 1px solid #000;
+	border-radius: 5px;
+	display: inline-block;
+	color: white;
+}
+#green {
+	background-color: #2ecc71;
+	border-color: #27ae60;
+	float: left;
+	margin-bottom: 5px;
+	padding:5px 10px;
+	margin-left:20px; 
+}
+#blue {
+	background-color: #3498db;
+	border-color: #2980b9;
+	float: right;
+	margin-bottom: 5px;
+	padding:5px 10px;
+	margin-right:20px; 
+}
+
+
+.loaded_messages {
+	height: 65%;
+	min-height: 300px;
+	max-height: 400px;
+	overflow: scroll;
+	margin-bottom: 10px;
+}
+
+
+
+.loaded_conversations{
+	max-height: 216px;
+	overflow-x: hidden; 
+}
+.user_found_messages{
+	border-bottom: 1px solid #d3d3d3;
+	padding: 8px 8px 10px 8px;
+}
+
+.user_found_messages:hover{
+	background-color: #d3d3d3;
+}
+.user_found_messages img{
+	height:35px;
+	float:left;
+}
+
+#grey{
+	color:#8c8c8c;
+}
+
+.resultDisplay {
+	padding: 5px 5px 0 5px;
+	height: 60px;
+	border-bottom: 1px solid #D3D3D3;
+}
+.resultDisplay a {
+	float: none;
+}
+.resultDisplay:hover {
+	background-color: #EBEBEB;
+	text-decoration: none;
+}
+.liveSearchProfilePic img {
+	height: 50px;
+	border-radius: 25px;
+	margin: 1px 12px 0 2px;
+	float: left;
+}
+
+.liveSearchText {
+	background-color: transparent;
+	color: #1E96CA;
+}
+
+.liveSearchText p{
+	margin-left: 10px;
+	font-size: 12px;
+}
+
+.tab-content{
+	margin-top: 25px;
 }
