--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,7 @@ textarea:focus {
 
 .resultDisplay {
 	padding: 5px 5px 0 5px;
-	height: 60px;
+	height: 70px;
 	border-bottom: 1px solid #D3D3D3;
 }
 .resultDisplay a {
@@ -504,4 +504,83 @@ textarea:focus {
 .timestamp_smaller {
 	font-size: 85%;
 	margin: 0;
+}
+
+.search{
+	margin:8px 0 0 15%;
+	position: absolute;
+	left:200px;
+}
+
+.search #search_text_input{
+	border:thin solid #e5e5e5;
+	float: left;
+	height:23px;
+	outline: 0;
+	width: 100px;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.button_holder{
+	background-color: #f1f1ff;
+	border: thin solid #e5e5e5;
+	cursor: pointer;
+	float: left;
+	height: 23px;
+	text-align: center;
+	width: 50px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+
+.button_holder img{
+	margin-top: 1px;
+	width: 20px;
+}
+
+.search_results{
+	background-color: #fff;
+	border:1px solid #dadada;
+	border-bottom: none;
+	border-top: none;
+	margin-top:21px; 
+}
+
+.search_results_footer{
+	padding: 7px 4px 0px 4px;
+	height: 30px;
+	border: 1px solid #DADADA;
+	border-top:none;
+	background-color: #384F90;
+	text-align: center;	
+}
+
+.search_results_footer a{
+	color: #fff;
+}
+
+
+.search_result {
+	padding: 10px;
+    height: 100px;
+}
+
+.searchPageFriendButtons {
+	float: right;
+}
+
+.searchPageFriendButtons input[type="submit"] {
+	border: none;
+    padding: 7px 12px;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.result_profile_pic {
+	float: left;
+    margin-right: 10px;
+}
+
+#search_hr {
+	margin-bottom: 0px;
 }
