--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,25 @@ textarea:focus {
 	right:300px;
 }
 
+.notification_badge1 {
+	padding: 3px 7px;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 1;
+	color: #fff;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	background-color: #F00;
+	border-radius: 10px;
+	position: absolute;
+	bottom:40px;
+	right:230px;
+}
+
+
+
+
 .resultDisplayNotification {
 	height: auto;
     color: #1485BD;
@@ -519,8 +538,10 @@ textarea:focus {
 	height:23px;
 	outline: 0;
 	width: 100px;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 .button_holder{
 	background-color: #f1f1ff;
