--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -629,3 +629,11 @@ textarea:focus {
     border-radius: 5px;
     color: #fff;
 }
+
+.postedImage img{
+
+	max-height: 300px;
+	max-width: 100%;
+	display: block;
+	margin: 5px auto;
+}
